[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "reforms"
dist-name = "reforms"
author = "Roman Sadzhenytsia"
author-email = "urchin.dukkee@gmail.com"
home-page = "https://github.com/boardpack/reforms"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
description-file = "README.md"
requires-python = ">=3.6"
requires = [
    "pydantic[email] >=1.6.2,!=1.7,!=1.7.1,!=1.7.2,!=1.7.3,!=1.8,!=1.8.1,<2.0.0",
    "jinja2 >=3.0.0",
]

[tool.flit.metadata.urls]
Documentation = "https://reforms.boardpack.org"

[tool.flit.metadata.requires-extra]
test = [
    "pytest ==5.4.3",
    "pytest-cov ==2.10.0",
    "mypy ==0.812",
    "flake8 >=3.8.3,<4.0.0",
    "black ==20.8b1",
    "isort >=5.0.6,<6.0.0",
    "starlette ==0.14.2",
    "fastapi ==0.65.2",
    "requests ==2.25.1",
    "python-multipart ==0.0.5",
]
dev = [
    "autoflake >=1.3.1,<2.0.0",
    "flake8 >=3.8.3,<4.0.0",
    "pre-commit",
    "tox >=3.23.1",
]
doc = [
    "mkdocs ==1.1.2",
    "mkdocs-material ==7.1.4",
    "markdown-include ==0.5.1",
    "mkdocs-markdownextradata-plugin ==0.1.9",
    "typer-cli ==0.0.9",
    "pyyaml ==5.4.1"
]

[tool.isort]
profile = "black"
known_first_party = ["reforms", "pydantic", "jinja2", "markupsafe", "starlette",
"pytest", "fastapi"]
